added user-profile component to display user configs feature when user logged in. fix some minor bugs. modified template for login component. added bootstrap 4 into angular.

--- a/mapoutUI/landingpage/src/app/login/login.component.scss
+++ b/mapoutUI/landingpage/src/app/login/login.component.scss
@@ -17,9 +17,9 @@ body{
     padding: padding-input-login;
     width: 20%;
 }
-#login{
+/* #login{
     padding: padding-input-login;
     width: 17%;
     background-color: cadetblue;
     color: white;
-}
+} */
