--- a/mapoutUI/landingpage/src/app/login/login.component.html
+++ b/mapoutUI/landingpage/src/app/login/login.component.html
@@ -1,5 +1,5 @@
-<div id='wrapper'>
-    <form>
+<!-- <div id='wrapper'>
+  <form>
     <div class="field">
       <input type="text" placeholder="UserName" name="username" [(ngModel)]="username" class="input">
     </div>
@@ -7,10 +7,38 @@
       <input type="password" placeholder="Password" name="password" [(ngModel)]="password" class="input">
     </div>
     <div class="field">
-      <button (click)="loginuser()" id="login">Login</button>
-      <a [routerLink]="['/register']"class="btn btn-link">Register></a>
+      <button class="btn btn-primary" (click)="loginuser()" id="login">Login</button>
+      <a [routerLink]="['/register']" class="btn btn-link">Register</a>
     </div>
-</form>
+  </form>
+</div> -->
+<!-- login component 
+using either angular reactive form or regular angular form
+this code uses lots of bootstrap classes
+-->
+<div class="container pt-3">
+  <div class="row justify-content-sm-center">
+    <div class="col-sm-6 col-md-4">
+
+      <div class="card border-info text-center">
+        <div class="card-header">
+          Sign in to continue
+        </div>
+        <div class="card-body">
+          <img src="https://placeimg.com/128/128/tech/sepia">
+          <h4 class="text-center">MAPOUT</h4>
+          <form class="form-signin">
+            <input type="text" class="form-control mb-2" placeholder="Username" required autofocus>
+            <input type="password" class="form-control mb-2" placeholder="Password" required>
+            <button class="btn btn-lg btn-primary btn-block mb-1" type="submit" (click)="loginuser()" id="login">Login</button>
+            <label class="checkbox float-left">
+              <input type="checkbox" value="remember-me"> Remember me
+            </label>
+            <a href="#" class="float-right">Need help?</a>
+          </form>
+        </div>
+      </div>
+      <a [routerLink]="['/register']" class="btn btn-link float-right">Register</a>
     </div>
-  
-  
+  </div>
+</div>
