modified register page

--- a/mapoutUI/landingpage/src/app/login/login.component.html
+++ b/mapoutUI/landingpage/src/app/login/login.component.html
@@ -19,17 +19,16 @@ this code uses lots of bootstrap classes
 <div class="container pt-3">
   <div class="row justify-content-sm-center">
     <div class="col-sm-6 col-md-4">
-
       <div class="card border-info text-center">
         <div class="card-header">
-          Sign in to continue
+          <b>Welcome to Map Out, to continue using the skill, please login, If you don't have an account with us yet, then please click register</b>
         </div>
         <div class="card-body">
           <img src="https://placeimg.com/128/128/tech/sepia">
-          <h4 class="text-center">MAPOUT</h4>
+          <h4>Map Out</h4>
           <form class="form-signin">
-            <input type="text" class="form-control mb-2" placeholder="Username" required autofocus>
-            <input type="password" class="form-control mb-2" placeholder="Password" required>
+            <input type="text" class="form-control mb-2" placeholder="Username" name= "username"  >
+            <input type="password" class="form-control mb-2" placeholder="Password" >
             <button class="btn btn-lg btn-primary btn-block mb-1" type="submit" (click)="loginuser()" id="login">Login</button>
             <label class="checkbox float-left">
               <input type="checkbox" value="remember-me"> Remember me
