--- a/mapoutUI/landingpage/src/app/register/register.component.html
+++ b/mapoutUI/landingpage/src/app/register/register.component.html
@@ -1,3 +1,5 @@
+
+<!--
 <div id='wrapper'>
   <form>
     <div class="field">
@@ -18,3 +20,62 @@
     </div>
   </form>
 </div>
+-->
+<!-- <div id='wrapper'>
+  <form>
+    <div class="field">
+      <input type="text" placeholder="UserName" name="username" [(ngModel)]="username" class="input">
+    </div>
+    <div class="field">
+      <input type="password" placeholder="Password" name="password" [(ngModel)]="password" class="input">
+    </div>
+    <div class="field">
+      <button class="btn btn-primary" (click)="loginuser()" id="login">Login</button>
+      <a [routerLink]="['/register']" class="btn btn-link">Register</a>
+    </div>
+  </form>
+</div> -->
+<!-- login component 
+using either angular reactive form or regular angular form
+this code uses lots of bootstrap classes
+-->
+<div class="container pt-3">
+    <div class="row justify-content-sm-center">
+      <div class="col-sm-6 col-md-4">
+        <div class="card border-info text-center">
+          <div class="card-header">
+            <b>Register</b>
+          </div>
+          <div class="card-body">
+            <img src="https://placeimg.com/128/128/tech/sepia">
+            <h4>Map Out</h4>
+            <form class="form-register">
+              <input type="text" class="form-control mb-2" placeholder="First Name" name= "firstname"  >
+              <input type="text" class="form-control mb-2" placeholder="Last Name" name= "lastname"  >
+              <input type="text" class="form-control mb-2" placeholder="User Name" name= "username"  >
+              <input type="password" class="form-control mb-2" placeholder="Password" name= "password">
+              <label for="sel1">Car Make</label>
+              <select class="form-control" id="sel1">
+             <option>1</option>
+             <option>2</option>
+             <option>3</option>
+             <option>4</option>
+              </select>
+              <label for="sel1">Car Model</label>
+              <select class="form-control" id="sel2">
+             <option>1</option>
+             <option>2</option>
+             <option>3</option>
+             <option>4</option>
+              </select>
+              <input type="text" maxlength= "4" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" class="form-control mb-2" placeholder="Car Year" name= "Year">
+              <button class="btn btn-lg btn-primary btn-block mb-1" type="submit" (click)="registeruser()" id="register">Register</button>
+              <a href="#" class="float-right">Need help?</a>
+            </form>
+          </div>
+        </div>
+        <a [routerLink]="['/login']" class="btn btn-link float-right">Cancel</a>
+      </div>
+    </div>
+  </div>
+  
