--- a/mapoutUI/landingpage/src/app/register/register.component.scss
+++ b/mapoutUI/landingpage/src/app/register/register.component.scss
@@ -1,6 +1,9 @@
 .btn-block{
 margin-top: 5%;
 }
-.form-control{
-    margin-top: 5%;
+.mat-autocomplete-panel{
+    left: inherit;
+    top: inherit;
+    background-color: white;
+    position: relative;
 }
