--- a/mapoutUI/landingpage/src/styles.scss
+++ b/mapoutUI/landingpage/src/styles.scss
@@ -14,3 +14,9 @@ body{
     margin-bottom: 9em;
     height: 10em;    
 }
+
+.mat-autocomplete-panel{
+    left: inherit;
+    top: inherit;
+    background-color: white 
+}
