auto complete bug solve

--- a/mapoutUI/landingpage/src/app/login/login.component.html
+++ b/mapoutUI/landingpage/src/app/login/login.component.html
@@ -16,16 +16,16 @@
 using either angular reactive form or regular angular form
 this code uses lots of bootstrap classes
 -->
+
 <div class="container pt-3">
   <div class="row justify-content-sm-center">
     <div class="col-sm-6 col-md-4">
       <div class="card border-info text-center">
         <div class="card-header">
-          <b>Welcome to Map Out, to continue using the skill, please login, If you don't have an account with us yet, then please click register</b>
         </div>
         <div class="card-body">
           <img src="https://placeimg.com/128/128/tech/sepia">
-          <h4>Map Out</h4>
+          <h4>Welcome to Map Out</h4>
           <form class="form-signin">
             <input type="text" class="form-control mb-2" placeholder="Username" name= "username"  >
             <input type="password" class="form-control mb-2" placeholder="Password" >
