--- a/mapoutUI/landingpage/src/app/register/register.component.html
+++ b/mapoutUI/landingpage/src/app/register/register.component.html
@@ -59,14 +59,14 @@ this code uses lots of bootstrap classes
                 <input type="text" class="form-control mb-2" placeholder="Car Make"  matInput [formControl]="myControl" [matAutocomplete]="auto">
                 <mat-autocomplete #auto="matAutocomplete">
                   <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                    {{optionCarmodel}}
+                    {{option}}
                   </mat-option>
                 </mat-autocomplete>
                 <label for="carmodel">Car Model</label>
-                <input type="text" class="form-control mb-2" placeholder="Car Model"  matInput [formControl]="myControlcarmodel" [matAutocomplete]="auto">
-                <mat-autocomplete #auto="matAutocomplete">
-                    <mat-option *ngFor="let optionCarmodel of filteredOptionscarmodel | async" [value]="optionCarmodel">
-                      {{optionCarmodel}}
+                <input type="text" class="form-control mb-2" placeholder="Car Model"  matInput [formControl]="myControlcarmodel" [matAutocomplete]="autoCarmodel">
+                <mat-autocomplete #autoCarmodel="matAutocomplete">
+                    <mat-option *ngFor="let optionModel of filteredOptionscarmodel | async" [value]="optionModel">
+                      {{optionModel}}
                     </mat-option>
                   </mat-autocomplete>
               <input type="text" maxlength= "4" oninput="validateNumber()" class="form-control mb-2" placeholder="Car Year" name= "Year">
